[package]
name = "ftp2mfs"
version = "0.3.0"
authors = ["Julius Michaelis <gitter@liftm.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jcaesar/ftp2mfs"
categories = ["command-line-utilities"]
keywords = ["ftp", "http", "rsync", "ipfs", "mfs"]
description = "Utility for syncing FTP folders into IPFS"

[dependencies]
clap = "3.0.0-beta.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["macros", "fs"] }
crossbeam-channel = "0.4"
humantime = "2.0.0"
anyhow = "1.0"
hostname = "0.3"
nanoid = "0.3"
ignore = "0.4"
serde_yaml = "0.8"
url = { version = "2", features = ["serde"] }
serde-humantime = "0.1.1"
blake3 = "0.3"
ipfs-mfs = { path = "crates/mfs", version = "0.2" }
async_ftp = "4.0.1"
async-trait = "0.1.31"
bytes = "0.5.5"
futures-channel = "0.3.5"
futures = "0.3.5"
futures-util = "0.3.5"
log = "0.4"
env_logger = "0.7.1"
bytesize = "1.0.1"
futures-core = "0.3.13"
walkdir = "2.3.1"
pathdiff = "0.2.0"
reqwest = { version = "0.10", features = ["gzip", "brotli", "stream"] }
select = "0.5"
arrsync = { path = "crates/arrsync", version = "0.1" }
tokio-util = { version = "0.3", features = ["compat"] }
async-recursion = "0.3.1"

[dev-dependencies]
libunftp = "0.11"
tokio = { version = "0.2", features = ["full", "macros"] }
unmemftp = { path = "crates/unmemftp" }
ctor = "0.1"

[workspace]
members = [
	"crates/unmemftp",
	"crates/mfs",
	"crates/arrsync",
	"hyperprov",
]
