[package]
name = "hyperprov"
version = "0.1.0"
authors = ["Julius Michaelis <gitter@liftm.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = "0.8.0-rc.2"
tokio = { version = "0.2", features = ["sync", "rt-core", "macros", "signal"] }
anyhow = "1.0"
failure = "0.1"
clap = "3.0.0-beta.1"
async-recursion = "0.3"
lazy_static = "1.4"
priority-queue = "1.0"
humantime = "2.0"
rand = "0.7"
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
