[package]
name = "arrsync"
version = "0.1.0"
authors = ["Julius Michaelis <gitter@liftm.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["rsync"]
categories = [ "filesystem", "network-programming" ]
repository = "https://github.com/jcaesar/ftp2mfs"
description = "Asynchronous Retrieving Rust rSYNc Client"

[dependencies]
tokio = { version = "0.2", features = ["tcp", "io-util"] }
url = "2.1"
anyhow = "1.0"
hexdump = "0.1"
async-trait = "0.1"
unix_mode = "0.1"
chrono = "0.4"
bytes = "1.0"
log = "0.4"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
