[package]
name = "arrsync"
version = "0.2.0"
authors = ["Julius Michaelis <gitter@liftm.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["rsync"]
categories = [ "filesystem", "network-programming" ]
repository = "https://github.com/jcaesar/ftp2mfs"
description = "Asynchronous Retrieving Rust rSYNc Client"
resolver = "2"

[dependencies]
tokio = { version = "1.7.1", features = ["net", "time", "io-util", "rt"] }
tokio-util = { version = "0.6.7", features = ["io"] }
url = "2.2.2"
anyhow = "1.0.41"
hexdump = "0.1.1"
async-trait = "0.1.50"
unix_mode = "0.1.1"
chrono = "0.4.19"
bytes = "1.0.1"
log = "0.4.14"
async-stream = "0.3.2"

[dev-dependencies]
tokio = { version = "1.7.1", features = ["full"] }
