[package]
name = "ipfs-mfs"
version = "0.1.0"
authors = ["Julius Michaelis <gitter@liftm.de>"]
edition = "2018"
license = "MIT"
readme = "README"
keywords = ["ipfs", "mfs"]
repository = "https://github.com/jcaesar/ftp2mfs"
description = "A slightly more ergonomic wrapper for ipfs-api's mfs-related functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
failure = "0.1.8"
futures = "0.3.5"
futures-core = "0.3.5"
futures-util = "0.3.5"
ipfs-api = "0.7"
thiserror = "1.0"
http = "0.2"

[lib]
name = "mfs"
path = "lib.rs"
