[package]
name = "ipfs-mfs"
version = "0.2.1"
authors = ["Julius Michaelis <gitter@liftm.de>"]
edition = "2018"
license = "MIT"
readme = "README"
keywords = ["ipfs", "mfs"]
repository = "https://github.com/jcaesar/ftp2mfs"
documentation = "https://docs.rs/ipfs-mfs/"
description = "A slightly more ergonomic wrapper for ipfs-api's mfs-related functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
failure = "0.1.8"
futures = "0.3.5"
futures-core = "0.3.5"
futures-util = "0.3.5"
ipfs-api = { version = "0.8.0-rc", features = ["builder"] }
thiserror = "1.0"
http = "0.2"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "0.2.21", features = ["full", "macros"] }
rand = "0.7.3"

[lib]
name = "mfs"
path = "lib.rs"
