[package]
name = "unmemftp"
version = "0.1.0"
authors = ["Julius Michaelis <gitter@liftm.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["ftp"]
categories = ["development-tools::testing"]

[dependencies]
libunftp = "0.11.0"
tokio = { version = "0.2.21", features = ["full"] }
async-trait = "0.1.31"

[dev-dependencies]
async_ftp = "4.0.1"
