[package]
name = "unmemftp"
version = "0.1.0"
authors = ["Julius Michaelis <gitter@liftm.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["ftp"]
categories = ["development-tools::testing"]
repository = "https://github.com/jcaesar/ftp2mfs"
description = """
A quick and somewhat dirty library for testing read-only ftp clients, based on libunftp
"""

[dependencies]
libunftp = "0.17.4"
tokio = { version = "1.7.1", features = ["full"] }
async-trait = "0.1.50"

[dev-dependencies]
async_ftp = "5.0.0"
